# YEDER

./: README.md
bins/: FALCON-EYE  FALCON-FILTER  GULL-map  GULL-visual  KESTREL  goose-FastqExcludeN  goose-FastqInfo  goose-FastqMaximumReadSize  goose-FastqMinimumLocalQualityScoreForward  goose-FastqMinimumLocalQualityScoreReverse  goose-FastqMinimumQualityScore  goose-FastqMinimumReadSize  goose-FastqSplit  goose-FastqTrimm  goose-char2line  goose-comparativemap  goose-count  goose-extract  goose-extractreadbypattern  goose-fasta2seq  goose-fastaextract  goose-fastainfo  goose-fastq2fasta  goose-fastq2mfasta  goose-fastqclustreads  goose-fastqpack  goose-fastqsimulation  goose-fastqunpack  goose-filter  goose-findnpos  goose-geco  goose-gede  goose-genrandomdna  goose-getunique  goose-info  goose-max  goose-mfmotifcoords  goose-min  goose-minus  goose-mutatedna  (+21 more)
scripts/: ReGetBins.sh
src/: CMakeLists.txt  defs.h  files.c  files.h  sys.c  sys.h  yeder.c
